--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ env:
   GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY}}
   GOOGLE_APPLICATION_CREDENTIALS: /secrets/service-account.json
   REDIRECT_URI: https://twitter.ivanenkomak.com/callback
-  ALLOW_ORIGIN: https://twitter.ivanenkomak.com/
+  ALLOW_ORIGIN: https://twitter.ivanenkomak.com
   APISERVER_APPLICATIONURL: 0.0.0.0:8080
 
 jobs:
